<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity.ui.votes.CreateVotes">

    <TextView
        android:id="@+id/title_create_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_create_vote"
        android:textSize="25sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/title_lifetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_create_vote"
        android:layout_centerHorizontal="true"
        android:text="@string/title_lifetime"
        android:textSize="20sp"
        android:layout_marginTop="40dp" />

    <RadioGroup
        android:id="@+id/radio_lifetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_lifetime"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_15_min"
            android:textSize="15sp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_1_hour"
            android:textSize="15sp"
            android:layout_marginStart="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_1_day"
            android:textSize="15sp"
            android:layout_marginStart="20dp"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_below="@+id/radio_lifetime"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_height="300dp" />

    <Button
        android:id="@+id/add_new_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/recycle"
        android:text="@string/add_new_var"/>

    <ImageButton
        android:id="@+id/ready"
        android:background="@drawable/oval_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_check_30"
        android:layout_marginEnd="10dp" />
</RelativeLayout>