<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/entries_background"
    tools:context=".EntriesActivities.LoginActivity">

    <EditText
        android:id="@+id/login_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="150dp"
        android:hint="@string/login_hint"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:drawableStart="@drawable/ic_login_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/password_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_enter"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:drawableStart="@drawable/ic_password_24"
        android:drawablePadding="20dp" />
    <Button
        android:id="@+id/enter_btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_enter"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/enter_button" />
    <Button
        android:id="@+id/register_btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_btn_enter"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="80dp"
        android:text="@string/register_button" />

</RelativeLayout>