<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.trpp.NavigationActivity.ui.profile.ProfileFragment"
        android:title="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_mail"
        android:name="com.example.trpp.NavigationActivity.ui.mail.MailFragment"
        android:title="@string/title_mail"
        tools:layout="@layout/fragment_mail" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.trpp.NavigationActivity.ui.notifications.NotificationsFragment"
        android:title="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_queue"
        android:name="com.example.trpp.NavigationActivity.ui.queue.QueueFragment"
        android:title="@string/title_queue"
        tools:layout="@layout/fragment_queue" />

</navigation>