<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_600"
    tools:context=".EntriesActivities.RegisterActivity">

    <EditText
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="60dp"
        android:hint="@string/login_hint"
        android:inputType="textPersonName"
        android:maxLength="20" />
    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_register"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="60dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="20"/>
    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_register"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="70dp"
        android:text="@string/register_button"/>
</RelativeLayout>